[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "screenshot-demo"
version = "0.1.0"
description = "Educational screenshot demo for packaging instruction"
requires-python = ">=3.9"
dependencies = ["Pillow"]

[project.scripts]
# This creates 'run-screenshot.exe' 
run-screenshot = "screenshot_demo:main"

